--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script src="js/common.js"></script>
 	<script src="js/main.js"></script>
   <script src="js/audio.js"></script>
-  <script>
+  <script> 
   
   </script>
   <!--[if lt IE 9]> 
@@ -68,6 +68,7 @@
 	<img id="imgs4" class="signalLevel" src="img/s4.png"/>
 	<img id="imgs5" class="signalLevel" src="img/s5.png"/>
 	<br><br>
+  <h4><b>TXMode:</b> <span id="txmode">-</span></h4>
 	<h4><b>Callsign:</b> <span id="callsign">-</span></h4>
 	<h4><b>Connection:</b> <span id="connection">Disconnected</span></h4>
 	<h4><b>CW Level:</b>  <span id="level">-</span></h4>
